fix: fixed layout and text spacing on some things

--- a/p2-web-dev-portfolio/p2-web-dev-portfolio.css
+++ b/p2-web-dev-portfolio/p2-web-dev-portfolio.css
@@ -83,21 +83,27 @@ nav {
   grid-column: 2 / 3;
   grid-row: 2;
 }
-
+#skills-breakdown-section {
+  grid-column: 1 / 3;
+  justify-self: center;
+  width: 100%;
+  max-width: 700px;
+  grid-row: 3;
+}
 #goals-section {
   grid-column: 1 / 3;
-  grid-row: 3;
+  grid-row: 4;
   justify-self: center;
 }
 
 #projects-section {
   grid-column: 1 / 3;
-  grid-row: 4;
+  grid-row: 5;
 }
 
 #contact-section {
   grid-column: 1 / 3;
-  grid-row: 5;
+  grid-row: 6;
   justify-self: center;
 }
 .box {
@@ -158,12 +164,11 @@ nav {
   height: auto;
   border-radius: 8px;
 }
-.skills-chart h2 {
+#skills-breakdown-section h3 {
   margin-top: 25px;
 }
-
-.skills-chart h3 {
-  margin-top: 25px;
+#skills-breakdown-section p {
+  margin-top: 5px;
 }
 
 .contact-section .box {
@@ -317,9 +322,7 @@ nav {
   }
 
   .skills-chart .chart-img {
-    width: 100%;
-    height: 50%;
-    object-fit: cover;
+    object-fit: contain;
     display: block;
   }
 }
